Implemented content tag helper methods

--- a/DevcampPortfolio/app/views/layouts/blog.html.erb
+++ b/DevcampPortfolio/app/views/layouts/blog.html.erb
@@ -23,10 +23,8 @@
 
     <%= yield %>
 
-    <%= render "shared/nav", location: 'bottom' %>
+    <%= render "shared/nav" %>
 
-    <% if session[:source] %>
-      <p>Thanks for visiting me from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("blog") %>
   </body>
 </html>
