--- a/DevcampPortfolio/app/views/pages/home.html.erb
+++ b/DevcampPortfolio/app/views/pages/home.html.erb
@@ -6,3 +6,9 @@
 
 <h1>Skills</h1>
 <%= @skills.inspect %>
+
+<hr>
+
+<%= content_tag :p, class: "my-special-class" do %>
+Hi, I'm in a paragraph tag
+<% end %>
