--- a/DevcampPortfolio/app/views/blogs/index.html.erb
+++ b/DevcampPortfolio/app/views/blogs/index.html.erb
@@ -12,16 +12,7 @@
   </thead>
 
   <tbody>
-    <% @blogs.each do |blog| %>
-      <tr>
-        <td><%= blog.title %></td>
-        <td><%= blog.body %></td>
-        <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
-        <td><%= link_to 'Show', blog %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-        <td><%= link_to 'Delete Post', blog, method: :delete, data: { confirm: 'Would your mother approve?' } %></td>
-      </tr>
-    <% end %>
+    <%= render @blogs %>
   </tbody>
 </table>
 
