--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
 
@@ -19,9 +22,9 @@
     <%= login_helper %>
 
     <%= yield %>
-    
-    <%= @copyright %>
-    
+
+    <%= copyright_generator %>
+
     <%= source_helper("application") %>
   </body>
 </html>
