Updated master layout styles along with helper methods

--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>Coach Zac Gallman</h1>
+<p>From the life and the art of me, it's time to get dope.</p>
