--- a/DevcampPortfolio/app/views/pages/home.html.erb
+++ b/DevcampPortfolio/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
-<h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+<div class="inner cover">
+  <h1 class="cover-heading">D1 Elite Training</h1>
+  <p class="lead">D1 Elite Training is not for everyone, those that do not want to get on the grind are not welcome. It's time to get focused, dedicated, and achieve your dreams.</p>
   <p class="lead">
-    <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
+    <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary"%>
   </p>
 </div>
