--- a/DevcampPortfolio/app/views/pages/contact.html.erb
+++ b/DevcampPortfolio/app/views/pages/contact.html.erb
@@ -1,7 +1,5 @@
-<h1>Pages#contact</h1>
+<h1>Contact Information</h1>
 
-<p><%= number_to_phone "5555555555" %></p>
+<p><%= number_to_phone "8019418608" %></p>
 
-<p><%= number_to_currency "18450" %></p>
-
-<p><%= number_with_delimiter "15087263847623" %></p>
+<p><%= "Email:  zacgangallman@gmail.com" %></p>
