Updated styles and added map for contact page

--- a/DevcampPortfolio/app/views/pages/contact.html.erb
+++ b/DevcampPortfolio/app/views/pages/contact.html.erb
@@ -1,5 +1,25 @@
-<h1>Contact Information</h1>
+<h1>Would you like to work together?</h1>
 
-<p><%= number_to_phone "8019418608" %></p>
+<hr>
 
-<p><%= "Email:  zacgangallman@gmail.com" %></p>
+<div class="row">
+  <div class="col-md-6">
+    <h3>D1 Sports Complex</h3>
+
+    <p>1279 Quail Creek Drive, Sandy, UT 84094</p>
+
+    <h3>Phone</h3>
+
+    <p><%= number_to_phone "8019418608" %></p>
+
+    <h3>Email</h3>
+
+    <p><a href="mailto:zacgangallman@gmail.com"?subject=PortfolioContact" "email me">Email me</a> </p>
+  </div>
+
+  <div class="col-md-6">
+    <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3029.985881414607!2d-111.85604568439689!3d40.5860670532467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87527d54d58928b1%3A0x3752fdb72db3a908!2s1279+E+Quail+Creek+Dr%2C+Sandy%2C+UT+84094!5e0!3m2!1sen!2sus!4v1501271898231" width="600" height="450" frameborder="1" style="border:0" allowfullscreen></iframe>
+  </div>
+</div>
+
+
