--- a/DevcampPortfolio/app/assets/stylesheets/blogs.scss
+++ b/DevcampPortfolio/app/assets/stylesheets/blogs.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   color: #555;
 }
 
@@ -21,7 +21,7 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: 'Roboto Slab', serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #333;
 }
@@ -157,7 +157,6 @@ h6, .h6 {
  */
 
 .blog-footer {
-  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -166,71 +165,4 @@ h6, .h6 {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
-}
-
-/*
- * Custom styles
- */
-
-.social-links li {
-  font-size: 2.5em;
-}
-
-.comment-card > .card {
-  margin-top: 15px;
-}
-
-.comment-attribution {
-  font-size: .8em;
-  font-style: italic;
-}
-
-.comment-name {
-  font-weight: 700;
-}
-
-.blogcrumb a {
-  font-size: 1.25em;
-  margin: 0px 10px 0px 10px;
-}
-
-.blog-nav {
-  margin-bottom: 30px;
-}
-
-.blog-sidebar-source {
-  margin-top: 20px;
-}
-
-.blog-body img {
-  width: 100%;
-}
-
-.blog-body img[alt=xlarge] {
-  width: 800px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.blog-body img[alt=large] {
-  width: 600px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.blog-body img[alt=medium] {
-  width: 400px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.blog-body img[alt=small] {
-  width: 200px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.topic-index > .card {
-  margin: 10px;
-  padding: 20px;
 }
