Integrated styles for blog pages

--- a/DevcampPortfolio/app/views/portfolios/_form.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/_form.html.erb
@@ -1,29 +1,29 @@
-<%= form_for(@portfolio_item) do |f| %>
-  <div class="field">
+<%= form_for(blog) do |f| %>
+  <% if blog.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
+
+      <ul>
+      <% blog.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :subtitle %>
-    <%= f.text_field :subtitle %>
-  </div>
-
-  <div class="field">
+  <div class="form-group">
     <%= f.label :body %>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: 'form-control', rows: 15 %>
   </div>
-  
-   <ul>
-     <%= f.fields_for :technologies do |technology_form| %>
-        <li>
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name %>
-        </li>
-        <% end %>
-    </ul>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit "Submit", class: 'btn btn-primary' %>
   </div>
 <% end %>
+Contact GitHub API Training Shop Blog About
+© 2017 GitHub, Inc. Terms Privacy Security Status Help
