--- a/DevcampPortfolio/app/views/shared/_blog_sidebar.html.erb
+++ b/DevcampPortfolio/app/views/shared/_blog_sidebar.html.erb
@@ -6,10 +6,10 @@
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
-      <li><a href="#"><%= fa_icon "github" %></a></li>
-      <li><a href="#"><%= fa_icon "instagram" %></a></li>
+      <li><a href="zacgallman24"><%= fa_icon "github" %></a></li>
+      <li><a href="zac_gallman24"><%= fa_icon "instagram" %></a></li>
       <li><a href="#"><%= fa_icon "facebook" %></a></li>
-      <li><a href="#"><%= fa_icon "twitter" %></a></li>
+      <li><a href="zac_gallman23"><%= fa_icon "twitter" %></a></li>
     </ol>
   </div>
 </div>
