--- a/DevcampPortfolio/app/views/portfolios/_form.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/_form.html.erb
@@ -1,29 +1,40 @@
-<%= form_for(blog) do |f| %>
-  <% if blog.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
+<%= form_for(@portfolio_item) do |f| %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
 
-      <ul>
-      <% blog.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+      <div class="form-group">
+        <%= f.label :subtitle %>
+        <%= f.text_field :subtitle, class: 'form-control' %>
+      </div>
     </div>
-  <% end %>
 
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :body %>
+        <%= f.text_area :body, class: 'form-control', rows: 13 %>
+      </div>
+    </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control', rows: 15 %>
-  </div>
+  <hr>
 
-  <div class="form-group">
-    <%= f.submit "Submit", class: 'btn btn-primary' %>
+  <div class="col-md-12">
+    <h2>Technolgies Used:</h2>
+    <div>
+      <%= f.fields_for :technologies do |technology_form| %>
+        <div class="form-group">
+          <%= technology_form.label :name %>
+          <%= technology_form.text_field :name, class: 'form-control' %>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="form-group">
+      <%= f.submit 'Save Portfolio Item', class: 'btn btn-primary btn-block' %>
+    </div>
   </div>
 <% end %>
-Contact GitHub API Training Shop Blog About
-© 2017 GitHub, Inc. Terms Privacy Security Status Help
