--- a/DevcampPortfolio/app/views/pages/contact.html.erb
+++ b/DevcampPortfolio/app/views/pages/contact.html.erb
@@ -18,8 +18,6 @@
   </div>
 
   <div class="col-md-6">
-    <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3029.985881414607!2d-111.85604568439689!3d40.5860670532467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87527d54d58928b1%3A0x3752fdb72db3a908!2s1279+E+Quail+Creek+Dr%2C+Sandy%2C+UT+84094!5e0!3m2!1sen!2sus!4v1501271898231" width="600" height="450" frameborder="1" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d983303.7723320605!2d5.532155092967877!3d15.69653985047631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x11be8a9e2773bd15%3A0x88bbf762a8d8a6db!2sAbalak%2C+Niger!5e0!3m2!1sen!2sus!4v1501519283564" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </div>
-
-
