--- a/DevcampPortfolio/app/views/portfolios/index.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/index.html.erb
@@ -1,7 +1,7 @@
 <div class="album text-muted">
   <div class="container">
-    <div class="row">
-    <%= render partial: 'portfolio_item', collection: @portfolio_items %>
+    <div class="row sortable">
+      <%= render partial: 'portfolio_item', collection: @portfolio_items %>
     </div>
   </div>
 </div>
