Updated images for about me page

--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -1,2 +1,12 @@
 <h1>Coach Zac Gallman</h1>
-<p>From the life and the art of me, it's time to get dope.</p>
+
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "op24.jpg", width: 300, alt: "profile image" %>
+  </div>
+    
+    <div class="col-md-8">
+    <p>It is time to get lit, fellas!</p>
+
+  </div>
+</div>
