Refactored alerts into help page

--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
          <%= render "shared/application_footer" %>
          
-         <%= render 'shared/alerts' %>
+         <%= render "shared/alert" %>
           
           <%= source_helper("application") %>
 
