--- a/DevcampPortfolio/app/views/layouts/blog.html.erb
+++ b/DevcampPortfolio/app/views/layouts/blog.html.erb
@@ -27,11 +27,11 @@
         <%= render 'shared/blog_sidebar' %>
       </div>
 
-        
-        <%= render 'shared/blog_footer' %>
-        
+      <%= render 'shared/blog_footer' %>
 
-        <%= source_helper("blog") %>
+      <%= alerts %>
+
+      <%= source_helper("blog") %>
     </div>
   </body>
 </html>
