--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -17,15 +17,25 @@
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
+          
+          <%= video_tag(
+              'russdunk.mp4',
+              id: 'background',
+              autoplay: true,
+              loop: true,
+              muted: true,
+              
+            )
+            %>
 
           <%= render "shared/application_nav" %>
 
           <%= yield %>
 
-         <%= render "shared/application_footer" %>
-         
-         <%= render "shared/alert" %>
-          
+          <%= render "shared/application_footer" %>
+
+          <%= alerts %>
+
           <%= source_helper("application") %>
 
         </div>
