Changed layout bar

--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -28,18 +28,16 @@
             )
             %>
 
-          <%= render "shared/application_nav" %>
+            <%= render "shared/application_nav" %>
 
           <%= yield %>
 
           <%= render "shared/application_footer" %>
 
-          <%= alert %>
-
-          <%= source_helper("application") %>
-
+          <%= alerts %>
 
         </div>
       </div>
     </div>
   </body>
+</html>
