--- a/DevcampPortfolio/app/views/shared/_blog_sidebar.html.erb
+++ b/DevcampPortfolio/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,8 @@
     <p>Michael Jordan<em>Obstacles don't have to stop you. If you run into a wall, don't turn around and give up. Figure out how to climb it, go through it, or work around it</p>
   </div>
 
+  <%= source_helper("alert alert-info blog-sidebar-source") %>
+
   <div class="sidebar-module">
     <h4>Topics</h4>
     <% @side_bar_topics.each do |topic| %>
