--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -1,2 +1,19 @@
-<h1>Coach Zac Gallman</h1>
-<p>From the life and the art of me, it's time to get dope.</p>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Zac Me</h1>
+
+    <hr>
+
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag "profile.jpg", width: 300, alt: "profile image", class: 'profile-img' %>
+      </div>
+
+      <div class="col-md-8">
+        <p>With over a decade of development experience in a number of industries I realized that the typical product creation process between clients and developers was flawed. All too often developers rarely communicate to clients throughout the development stage, resulting in a final product that fails to reach the goal sought by the customer and end user.</p>
+
+        <p>For this reason I decided to utilize a completely different development pattern that focuses on highly focused communication and transparent design patterns. When I take on a project not only do I work to craft the application according to the client's specifications, I give daily updates to ensure that the project is aligning properly with the client's goals. The end result is the right product, delivered on time, and on budget.</p>
+      </div>
+    </div>
+  </div>
+</div>
