--- a/DevcampPortfolio/app/views/pages/contact.html.erb
+++ b/DevcampPortfolio/app/views/pages/contact.html.erb
@@ -1,3 +1,4 @@
+<div class="app-card-container">
 <h1>Would you like to work together?</h1>
 
 <hr>
@@ -21,3 +22,4 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d983303.7723320605!2d5.532155092967877!3d15.69653985047631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x11be8a9e2773bd15%3A0x88bbf762a8d8a6db!2sAbalak%2C+Niger!5e0!3m2!1sen!2sus!4v1501519283564" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </div>
+
